# saferenv

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_test.yml  ci.yml  release.yml
src/: main.rs  rules.rs
