[package]
name = "saferenv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
exitcode = "1.1.2"
log = "0.4"
nix = { version = "0.30.1", features = ["process", "signal"] }
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3.2.0"